First label based matching